[project]
name = "env-sigil"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lxml[cssselect]>=5.3.1",
    "opencc>=1.1.9",
    "pillow>=11.1.0",
    "pyqt6>=6.8.1",
    "pyside6>=6.8.2.1",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pytest>=8.3.4",
]
